MODAL ELIMINAR en Proyectos. FIX Z-index de navbar, movimiento de contenido a la derecha y error de modal en Proyectos.

--- a/Front-End-Angular/src/app/components/edit-component/delete-button/delete-button.component.css
+++ b/Front-End-Angular/src/app/components/edit-component/delete-button/delete-button.component.css
@@ -1,3 +1,7 @@
 .modal-open {
     overflow: hidden !important; 
 }
+
+.modal-backdrop {
+    z-index: -1;
+}
