--- a/Front-End-Angular/src/app/components/navbar/navbar.component.css
+++ b/Front-End-Angular/src/app/components/navbar/navbar.component.css
@@ -6,7 +6,7 @@ BARRA DE NAVEGACIÓN
 .sidebar {
   position: fixed;
   inset: 0;
-  z-index: 50;
+  z-index: 2000;
 
   display: flex;
   flex-direction: column;
